--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
   "dependencies": {
     "async-file": "^2.0.2",
     "fs": "0.0.1-security",
+    "path": "^0.12.7",
     "util": "^0.11.0"
+  },
+  "devDependencies": {
+    "@types/node": "^10.5.2"
   }
 }
