--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
     "path": "^0.12.7",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
+    "react-regl": "^2.1.1",
     "react-scripts": "1.1.4",
     "regl": "^1.3.7",
     "regl-line2d": "^3.0.9",
-    "util": "^0.11.0",
-    "typescript": "2.4.2"
+    "typescript": "2.4.2",
+    "util": "^0.11.0"
   },
   "scripts": {
     "start": "react-scripts start",
