--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/fs-extra": "^5.0.4",
     "@types/jest": "^23.3.0",
     "@types/react": "^16.4.7",
     "@types/react-dom": "^16.0.6",
     "async-file": "^2.0.2",
-    "fs": "0.0.1-security",
+    "fs-extra": "^7.0.0",
     "path": "^0.12.7",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
