--- a/.gitignore
+++ b/.gitignore
@@ -73,3 +73,19 @@ src/App.js
 src/App.js.map
 src/RenderSet.js.map
 src/RenderSet.js
+src/RenderSet.js.map
+src/RenderSet.js
+src/positioner.js.map
+src/positioner.js
+src/App.js.map
+src/App.js
+src/TTYAgent.js.map
+src/TTYAgent.js
+src/suggester.js.map
+src/suggester.js
+src/registerServiceWorker.js.map
+src/registerServiceWorker.js
+src/models.js.map
+src/models.js
+src/index.js.map
+src/index.js
